--- a/layout/default/theme.ini
+++ b/layout/default/theme.ini
@@ -16,9 +16,7 @@ image_width = 1600
 image_height = 1600
 dateFormat = "M jS, Y g:i A"
 icon_container = "i"
-note_styles[] = "{title:`small`,tag:`p`,className:`small`,value:`p`},"
-note_styles[] = "{title:`Striked`,tag:`p`,className:`striked`,value:`p`},"
-note_styles[] = "{title:`Big Title`,tag:`h1`,className:`bigtitle`,value:`h1`},"
+note_styles[] = ""
 notification_error = "alert alert-danger animated fadeInDown"
 notification_success = "alert alert-success animated fadeInDown"
 notification_info = "alert alert-info animated fadeInDown"
