Update to v0.0.9, check CHANGELOG.md for changes.

--- a/layout/default/theme.ini
+++ b/layout/default/theme.ini
@@ -45,7 +45,10 @@ signup_errorterms = '<div class="alert alert-warning">You MUST agree to the Term
 passwordreset_success = '<div class="alert alert-success text-center">Check your Email!</div>'
 passwordreset_erroremail = '<div class="alert alert-danger text-center">Problem Sending Email!</div>'
 passwordreset_erroraccount = '<div class="alert alert-danger text-center">No Account Found!</div>'
-passwordreset_errorinvalidemail = '<div class="alert alert-danget text-center">The Email provided is invalid!</div>'
+passwordreset_errorinvalidemail = '<div class="alert alert-danger text-center">The Email provided is invalid!</div>'
+payment_success = '<div class="alert alert-success">Payment was successfull, thank you for your business and support!</div>'
+payment_cancelled = '<div class="alert alert-info">Payment process was cancelled!</div>'
+payment_error = '<div class="alert alert-danger">There was an issue processing your payment!</div>'
 subscriber_success = '<div class="alert alert-success">Thank you for Subscribing to Our Newletters.</div>'
 subscriber_error = '<div class="alert alert-danger">There was an Issue adding your Subscription.</div>'
 subscriber_already = '<div class="alert alert-info">The email provided is already a Subscriber.</div>'
