--- a/layout/default/theme.ini
+++ b/layout/default/theme.ini
@@ -32,6 +32,8 @@ contactus_success = '<div class="alert alert-success" role="alert">Thank You for
 contactus_error = '<div class="alert alert-danger" role="alert">There was an Issue Sending Your Message. But we have a record of your contact, so never fear, we still got your message.</div>'
 booking_success = '<div class="alert alert-success" role="alert">Thank You for Making a Booking.</div>'
 booking_error = '<div class="alert alert-danger" role="alert">There was a problem adding the Booking.</div>'
+booking_error_time = '<div class="alert alert-danger" role="alert">Date or Time is already Booked, please select a different Date or Time.</div>'
+booking_error_businesshours = '<div class="alert alert-danger" role="alert">The Date or Time that was selected is outside of our Operating Hours, please select a different Date or Time.</div>'
 booking_info = '<div class="alert alert-info" role="alert">The Date and or Time Chosen is already Booked Out. Please select another Date or Time.</div>'
 comment_success = '<div class="alert alert-success" role="alert">Comment Added, waiting for Approval.</div>'
 comment_error = '<div class="alert alert-danger" role="alert">There was an Issue adding your Comment.</div>'
