--- a/layout/default/theme.ini
+++ b/layout/default/theme.ini
@@ -21,7 +21,7 @@ alert = '<div class="alert alert-<print alert> text-center col-12 col-sm-10 mx-a
 payment_success = '<div class="alert alert-success text-center col-12 col-10 mx-auto" role="alert">Payment was successfull, thank you for your business and support!</div>'
 payment_cancelled = '<div class="alert alert-info text-center col-12 col-10 mx-auto" role="alert">Payment process was cancelled!</div>'
 payment_error = '<div class="alert alert-danger text-center col-12 col-10 mx-auto" role="alert">There was an issue processing your payment!</div>'
-cart_menu = '<span class="cart cart"><print cart="quantity"></span>'
+cart_menu = '<span class="shoppingcart"><print cart="quantity"></span>'
 cartage_menu = '<tr><td><img src="<print cartageitem=thumb>" style="width:25px;" loading="lazy" alt="<print cartageitem=title>"></td><td><print cartageitem="title"></td><td><print cartageitem="quantity"></td><td>X</td><td>&dollar;<print cartageitem="cost"></td></tr>'
 cart_empty = '<article class="col-11"><div class="alert alert-info" role="alert">There are no items in the Cart.</div></article>'
 cart_error = '<div class="alert alert-danger" role="alert">There was an Issue placing your Order.</div>'
